# appotype_interview_demo

./: .gitignore  ds_lookup.ipynb  fmnist_client_example.py  fmnist_datamodule.py  fmnist_dataset.py  fmnist_inference_service.py  fmnist_lightning_module.py  main.py  pyproject.toml  server_config.py  server_config.yaml
